# webhook-provider

./: README.md
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: 20240309230140_create_subscriptions_table.up.sql  20240309234648_create_consumers_table.up.sql  20240309235926_reference_consumers_table.down.sql  20240309235926_reference_consumers_table.up.sql
server/src/: api.rs  config.rs  db.rs  domains.rs  main.rs  state.rs
server/src/domains/: subscription.rs
ui/: astro.config.mjs  package.json  pnpm-lock.yaml
ui/src/layouts/: layout.astro
ui/src/pages/: index.astro
ui/src/pages/subscribe/: index.astro
