[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1" , features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "time", "json"]}
serde = { version = "1.0.195", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.80"
